# last2libre

./: Pipfile  setup.cfg  setup.py
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
last2libre/: exporter.py  importer.py  last2libre_cli.py  scrobblelib.py
tests/: test_package.py  test_wrapper.py
