[metadata]
name = last2libre
version = attr: last2libre.__version__
description = Download and export scrobble Last.fm history elsewhere
long_description = file: README.md, LICENSE.txt
author = kabniel, Justin W. Flory
author_email = jflory7 [at] gmail [dot] com
keywords = Last.fm, Libre.fm, music, metadata, scrobble, Lastfm, data, tool
license = BSD 3-Clause License
# This includes the license file in the wheel.
license_file = LICENSE.txt
url = https://github.com/jwflory/last2libre
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3
#install_requires =
#  requests
#  importlib; python_version == "2.6"


[entry_points]
console_scripts =
    last2libre_cli = last2libre.last2libre_cli:main


[options.package_data]
* = *.txt, *.rst
