[metadata]
name = last2libre
version = attr: last2libre.__version__
url = https://github.com/jwflory/last2libre
author = kabniel, Justin W. Flory
author_email = jflory7 [at] gmail [dot] com
license = GNU Public License v3
description = Utility to export Last.fm / Libre.fm history and import history into Libre.fm / Gnu.fm
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Last.fm, Libre.fm, music, metadata, scrobble, Lastfm, data, tool
classifiers =
    License :: OSI Approved :: GPLv3 License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
python_requires = >=3
include_package_data = True
packages = find:
#install_requires =
#  requests
#  importlib; python_version == "2.6"

[options.entry_points]
console_scripts =
    last2libre_cli = last2libre.last2libre_cli:main

[options.package_data]
* = *.txt, *.rst
